simpler_server.py, client.py and Dockerfile updates

--- a/002-server/Dockerfile
+++ b/002-server/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8
-ENV SRC_DIR /usr/bin/src/webapp/src
+ENV SRC_DIR /usr/bin/src/
 COPY src/* ${SRC_DIR}/
 WORKDIR ${SRC_DIR}
 ENV PYTHONUNBUFFERED=1
